--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,9 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Aqui vamos a hacer un blog post</h1>
-  <p>y este es el parrafo de inicio</p>
+  <section id="container">
+    <h1>Este es el titulo atractivo e interesante del post</h1>
+    <p>y este es el parrafo de inicio</p>
+  </section>
 </body>
 </html>
