--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
   <section id="container">
+    <div id="cabecera">
+      Cabecera
+    </div>
     <h1>Este es el titulo atractivo e interesante del post</h1>
     <p>y este es el parrafo de inicio</p>
   </section>
