--- a/blogpost.html
+++ b/blogpost.html
@@ -9,11 +9,15 @@
 </head>
 <body>
   <section id="container">
-    <div id="cabecera">
-      Cabecera
-    </div>
-    <h1>Este es el titulo atractivo e interesante del post</h1>
-    <p>y este es el parrafo de inicio</p>
+    <header id="cabecera">
+      Hyperblog
+      <span id="tagline">tu blog de confianza</span>
+    </header>
+    <article id="post">
+      <h1>Este es el titulo atractivo e interesante del post</h1>
+      <p>y este es el parrafo de inicio</p>
+
+    </article>
   </section>
 </body>
 </html>
