--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,10 @@
 </head>
 <body>
   <section id="container">
+    <article id="cabecera">
+      hyperblog
+      <span id="tagline">tu blog de confianza</span>
+    </article>
     <article id="post">
 
       <h1>Este es el titulo atractivo e interesante del post</h1>
