agregue suscripción, cambie la cabecera y puse todo azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
   <section id="container">
     <article id="cabecera">
       hyperblog
-      <span id="tagline">tu blog de confianza</span>
+      <span id="tagline">tu blog de maestro</span>
     </article>
     <article id="post">
 
@@ -20,6 +20,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti dolor itaque, inventore facere facilis quis quo cumque corporis, beatae corrupti, iusto sint! Tempore adipisci rerum recusandae cumque aut id, rem similique. Itaque doloremque maxime beatae deleniti minus facere facilis dolores modi, veniam consectetur molestias labore ut illum a! Quod neque tenetur temporibus minima, cupiditate, consequatur excepturi sit obcaecati ratione non, aut veniam iste atque dolore maiores, cum iusto. Necessitatibus labore quidem aspernatur dolore molestias odio quasi id fugit itaque provident, velit, rem, amet. Iste perferendis unde voluptatum doloremque dolores ducimus molestiae nemo illo, sed exercitationem inventore, libero sunt, beatae. Natus.</p>
 
       <p>tercer parrafo</p>
+      <p>suscribete y dale like</p>
     </article>
   </section>
 </body>
