quite una letra al titulo de cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
   <section id="container">
     <article id="cabecera">
       hyperblog
-      <span id="tagline">tu blog de cabecera</span>
+      <span id="tagline">tu blog de cabecer</span>
     </article>
     <article id="post">
 
