Color de fondo, logo nuevo y mejor color de header

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
 <body>
   <section id="container">
     <article id="cabecera">
+      <img id="logo" src="imagenes/dragon.png" />
       hyperblog
       <span id="tagline">tu blog de cabecer</span>
     </article>
