--- a/blogpost.html
+++ b/blogpost.html
@@ -8,12 +8,12 @@
   <title>Bienvenido a hyperblog 2.0</title>
 </head>
 <body>
-  <section id="container">
-    <article id="cabecera">
+  <main id="container">
+    <header id="cabecera">
       hyperblog
       <span id="tagline">tu blog de cabecer</span>
-    </article>
-    <article id="post">
+    </header>
+    <section id="post">
 
       <h1>Este es el titulo atractivo e interesante del post</h1>
       <p>y este es el parrafo de inicio</p>
@@ -21,7 +21,10 @@
 
       <p>tercer parrafo</p>
       <p>suscribete y dale like</p>
-    </article>
-  </section>
+    </section>
+    <footer id="footer">
+      Hecho por Carlos
+    </footer>
+  </main>
 </body>
 </html>
