Tildes y typos arreglados en el post

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
   <main id="container">
     <header id="cabecera">
       hyperblog
-      <span id="tagline">tu blog de cabecer</span>
+      <span id="tagline">tu blog de cabecera</span>
     </header>
     <section id="post">
 
