--- a/blogpost.html
+++ b/blogpost.html
@@ -24,7 +24,7 @@
       <p>suscribete y dale like</p>
     </section>
     <footer id="footer">
-      Hecho por Carlos
+      Hecho por Carlos y solo por Carlos
     </footer>
   </main>
 </body>
